--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
+    "@prisma/extension-accelerate": "^1.3.0",
     "hono": "^4.7.5",
     "prisma": "^6.5.0"
   },
