--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
     "deploy": "wrangler deploy --minify"
   },
   "dependencies": {
+    "@milendrakumarbaghel/blogginng-site": "^1.0.0",
     "@prisma/client": "^6.5.0",
     "@prisma/extension-accelerate": "^1.3.0",
     "bcryptjs": "^3.0.2",
