--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@milendrakumarbaghel/blogging-site": "^1.0.0",
+    "@milendrakumarbaghel/blogging-site": "^1.0.1",
     "@tailwindcss/vite": "^4.1.1",
     "axios": "^1.8.4",
+    "dotenv": "^16.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/node": "^22.14.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
