--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@milendra/blogging-site": "^1.0.1",
     "@milendrakumarbaghel/blogging-site": "^1.0.1",
     "@tailwindcss/vite": "^4.1.1",
     "axios": "^1.8.4",
